Configure React app for deployment to GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://sophiele256.github.io/Web-project",
+  "homepage": "https://sophiele256.github.io/Web-project",
   "name": "web-project",
   "version": "0.1.0",
   "private": true,
